--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.env 
+# 여기에 추가 시, git의 버전 관리 대상에 포함되지 않는다는 뜻
+# git에 숨기고 싶은 정보가 담길 시, 다른 파일에(.env) 변수를(REACT_APP@#$) 따로 선언 후 올릴 파일에는 변수만 작성 
+# 그렇다고 완전이 보안 되는 것은 아님. 왜냐면 client가 우리 React.js를 받아서 쓰기 때문에 받아서 실행하게 되면 결국 우리가 작성해둔 변수 안에 그 실제값이 들어가게 됨
+# 그냥 단지 github에 업로드하고 싶지 않을 때 사용하면 됨
